2017-01-05  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* src/m_montecarlo.cc (MCGeneral): Added chack that sensor_pos/los
	in fact just have one row (before additional rows were silently
	ignored).

	* src/m_rte.cc (iyIndependentBeamApproximation): 1D now handled
	exactly as 2D and 3D. Added another GIN option.

	* src/workspace.cc: Polishing of description of iy_id.

	* src/rte.cc (apply_iy_unit, apply_iy_unit2): Inside these
	functions the name y_unit was still used.

2017-01-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-582

	* src/rte.cc (get_iy_of_background): Had commited with a cout.

2017-01-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-581

	* A basic implementation of iy_id now in place.

	* controlfiles/general/general.arts: iy_id set to 0.

	* src/m_radiation_field.cc (radiation_fieldCalcFromiyCalc):
	* src/m_fos.cc (iyFOS, fos):
	* src/m_surface.cc (iySurfaceCallSubAgendaX, iySurfaceFastem)
	(iySurfaceRtpropAgenda, iySurfaceRtpropCalc):
	* src/rte.cc (get_iy_of_background):
	* src/m_rte.cc (iyEmissionStandard,iyCalc):
	* src/m_cloudradar.cc (yCloudRadar): Changes related to iy_id.

	* src/agendas.cc (define_agenda_data): Added iy_id as input to
	iy_surface_agenda and all iy_surface_sub_agenda-s.

	* src/workspace.cc: Removed mblock_aa_grid. Should have been done earlier.

2017-01-03  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-580

	* make check-all works again. Not just fixed the problems, also
	tried to make the contraolfiles a bit more resistant against
	changes in the rt agendas.

	* controlfiles/artscomponents/arts-xml-data/TestClouds_Mars.arts:
	* controlfiles/artscomponents/arts-xml-data/TestClouds_Venus.arts:
	* controlfiles/planetary_toolbox/demos/passive/DemoScat_MC_1D.arts:
	* controlfiles/planetary_toolbox/demos/active/DemoLinkBudget.arts:
	* controlfiles/artscomponents/radiolink/TestRadioLink2.arts:
	* controlfiles/artscomponents/radiolink/TestRadioLink.arts: